...
        android:layout_below="@id/tvCurrentDoorbell"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Are you sure you want to do this?"/>

    <Button
        android:id="@+id/btnConfirmRemove"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tvCurrentDoorbell"
        android:layout_marginTop="35dp"
        android:layout_alignParentLeft="true"
        android:background="#F44336"
...
