...

    <group
        android:id="@+id/group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="Home"/>

        <item
            android:id="@+id/nav_faces"
            android:title="Faces" />

        <item
            android:id="@+id/nav_settings"
            android:title="Settings" />


    </group>
    <item
        android:id="@+id/nav_logout"
...
