...
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:src="@drawable/ic_info" />

    <TextView
        android:id="@+id/tvFaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BEFORE FACES"
        android:textSize="35dp"
        android:padding="15dp"/>

...
